# dr-eigs

./: CMakeLists.txt  README.md  compile_flags.txt
.github/workflows/: test.yml
include/dr/: sparse_eigendecomp.hpp
test/: CMakeLists.txt  main.cpp  sparse_eigendecomp_tests.cpp
